# photographer

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  Photographer.ipynb  README.md  converter.py  main.py  map.py  metaoptimizer.py  optimizer.py  optimizer1.py  optimizer2.py  ph.py  pyproject.toml  score.py  server.py  tasks.py  test_optimizer.py  test_optimizer1.py  test_ph.py  test_tools.py  tools.py
.claude/: launch.json
data/aiguillemidi1/: __init__.py  info.json
data/aiguillemidi2/: __init__.py  info.json
data/aiguillemidi3/: info.json
data/basic/: __init__.py
data/brevent/: __init__.py  info.json
data/brevent1/: info.json
data/brevent2/: info.json
data/brevent3/: info.json
data/breventold/: __init__.py
data/frankfurt/: info.json
data/nurnberg/: info.json
data/osterhofen/: info.json
data/osterhofen1/: __init__.py  info.json
data/osterhofen2/: __init__.py  info.json
data/planpraz/: info.json
data/statueofliberty/: __init__.py  info.json
notebooks/: Conversion WSG84 to UTM.ipynb  Initialisation.ipynb  Locate Photographer.ipynb  WSG84 to UTM coordinates.ipynb  WSG84-to-UTM-coordinates.ipynb  coordinates.ipynb  format-resolution.ipynb  heatmap.ipynb  meta.ipynb  sensitivity.ipynb
src/: converter.py  map.py  score.py  server.py  test_tools.py
static/: index.html  konva.html  robots.txt
terraform/azure/: main.tf
terraform_azure/: main.tf
