[tool.poetry]
name = "photographer"
version = "0.1.0"
description = "An application to locate the position of the photographer."
authors = ["Sylvain Roy <sylvain.roy@m4x.org>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
scipy = "^1.6.0"
numpy = "^1.20.1"
fastapi = "^0.63.0"
pydantic = "^1.7.3"
utm = "^0.7.0"
uvicorn = "^0.13.3"
aiofiles = "^0.6.0"
Pillow = "^8.1.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.3.4"
ipython = "^7.20.0"
folium = "^0.12.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
