[project]
name = "photographer"
version = "0.1.1"
description = "An application to locate the photographer."
authors = ["Sylvain Roy <sylvain.roy@m4x.org>"]
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.3",
    "numpy>=2.1.2",
    "pillow>=11.0.0",
    "pydantic>=2.9.2",
    "scipy>=1.14.1",
    "utm>=0.7.0",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "folium>=0.18.0",
    "ipython>=8.29.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
]
